fix hero page layout issue

--- a/src/home/components/Hero.css
+++ b/src/home/components/Hero.css
@@ -1,7 +1,5 @@
 .section-hero {
-  height: 88vh;
-
-  margin-bottom: 8rem;
+  margin-bottom: 6.4rem;
 
   position: relative;
 }
@@ -11,7 +9,6 @@
   height: 32vh;
 
   justify-content: space-between;
-  margin-bottom: 3.2rem;
 
   color: var(--font-color);
 }
@@ -51,7 +48,6 @@
 
 /* HERO DESCRIPTION */
 .hero-description div {
-  /* FIXME ALL PARAGRAPH LINE HEIGHT NEED TO BE ADJUSTED SYSTEMMATICALLY */
   line-height: 1.6;
 
   color: var(--font-color--secondary);
